--- a/module/Anuncios/view/anuncios/index/em-destaque.phtml
+++ b/module/Anuncios/view/anuncios/index/em-destaque.phtml
@@ -12,20 +12,20 @@
             </div>
             <div class="article-main-content">
                 <p>1) Existem 2 tipos de destaque, anuncio grande na primeira pagina, e o destaque mais pequeno tambem na primeira pagina. Na listagem de anuncios os destaques aparecem tambem nessa pagina.</p>
-                <p>2) Comece por publicar o seu anuncio , clicando no botão normal "ANUNCIAR" que és no top da pagina. </p>
-                <p>3) Depois do seu anuncio estar publicado e aprovado pela nossa equipa aṕos confirmacao de pagamento ele aparece na pagina. Pode ser criar um registo para gerir os seus anuncios</p>
+                <p>2) Comece por publicar o seu anuncio , clicando no botão normal "ANUNCIAR" que está no top da página. </p>
+                <p>3) Entre em contacto com a nossa equipa, e diga qual é o codigo do auncio que foi fornecido por email, depois do seu anuncio estar publicado e aprovado pela nossa equipa aṕos confirmacao de pagamento ele aparece na página.</p>
                 <p>Os prazos e valores de pagamento disponíveis são os seguintes:</p>
                 <h3>ANUNCIO COM GRANDE DESTAQUE NA PRIMEIRA PAGINA</h3>
                 <ul>
-                    <li>Durante 7 dias - Valor: 5€</li>
-                    <li>Durante 15 dias - Valor: 10€</li>
                     <li>Durante 30 dias - Valor: 15€</li>
+                    <li>Durante 60 dias - Valor: 20€</li>
+                    <li>Durante 90 dias - Valor: 25€</li>
                 </ul>
                 <h3>ANUNCIO PEQUENO DESTAQUE NA PRIMEIRA PAGINA</h3>
                 <ul>
-                    <li>Durante 7 dias - Valor: 3€</li>
-                    <li>Durante 15 dias - Valor: 6€</li>
-                    <li>Durante 30 dias - Valor: 9€</li>
+                    <li>Durante 30 dias - Valor: 5€</li>
+                    <li>Durante 60 dias - Valor: 10€</li>
+                    <li>Durante 90 dias - Valor: 15€</li>
                 </ul>
                 <p>O único método de pagamento disponível é a transferência bancária.</p>
                 <p>Caso surjam dúvidas ou problemas estamos sempre disponíveis via email:
@@ -33,6 +33,4 @@
             </div>
         </div>
     </div><!-- /container -->
-    <a class="btn btn-danger btn-large btn-block" href="
-    <?php echo $this->url('anunciar', array('action' => 'contactar-destaque')); ?>">CONTACTAR PARA DESTACAR -> COMEÇAR JÁ!</a>
 </section>
