--- a/module/Anuncios/view/partial/informacao.phtml
+++ b/module/Anuncios/view/partial/informacao.phtml
@@ -1,18 +1,3 @@
 <h3 class="title"><span>MARCAS</span></h3>
-<ul class="media-list">
-    <li class="media">
-        <a class="pull-left" href="#"><img src="themes/images/clothes/2.jpg" alt="Women's Clothing" title=" Women's Clothing " ></a>
-        <div class="media-body">
-            <h4 class="media-heading"><a href="#">Women's Clothing</a></h4>
-            <span>$14.00</span>
-        </div>
-    </li>
-    <li class="media">
-        <a class="pull-left" href="#"><img src="themes/images/clothes/3.jpg" alt="Women's Clothing" title=" Women's Clothing "></a>
-        <div class="media-body">
-            <h4 class="media-heading"><a href="#">Women's Clothing</a></h4>
-            <span class="normalprice">$18.00 </span>&nbsp;<span class="specialPrice">$9.00</span>
-            <span class="discount"><br>Save:&nbsp;50% off</span>
-        </div>
-    </li>
-</ul>
+<a class="btn btn-danger btn-large btn-block" href="
+    <?php echo $this->url('banner'); ?>">A SUA MARCA AQUI!</a>
