--- a/module/Application/view/partial/footer.phtml
+++ b/module/Application/view/partial/footer.phtml
@@ -2,7 +2,7 @@
     <div class="container">
         <h5>Metodos de pagamento disponiveis para anuncios em destaque e banners</h5>
         <p>Publique o seu anúncio na hora, gratuitamente e sem necessidade de registo. Para um maior destaque ao seu anúncio pode optar pela opção paga.</p>
-        <p>O único método de pagamento disponível é a transferência bancária. registe-se ou envie um email atraves dos nossos <a href="#">contactos</a></p>
+        <p>O único método de pagamento disponível é a transferência bancária. registe-se ou envie um email atraves dos nossos <a href="<?php echo $this->url('contactos'); ?>">contactos</a></p>
         <hr class="soften"/>
         <div class="footerMenu">
             <?php foreach($this->menu()->getFooterMenu()  as $key => $option) : ?>
