--- a/module/Application/view/partial/header.phtml
+++ b/module/Application/view/partial/header.phtml
@@ -9,13 +9,13 @@
     }(document, 'script', 'facebook-jssdk'));
 </script>
 <header class="header">
-    <h1 class="seo">Seja bem vindo e anuncie concosco gratuitamente! - Aproveite os 12 primeiros anuncios com imagem acessivel ficam em destaque.</h1>
+    <h1 class="seo">Seja bem vindo e anuncie concosco gratuitamente! - Aproveite os 11 primeiros anúncios com imagem acessivel ficam em destaque.</h1>
     <div class="container">
         <div class="row">
             <div class="offset6 span6 right-align loginArea">
-                <a href="" role="button" data-toggle="modal"><span class="btn btn-mini">PUBLICAR BANNER NO RODAPE</span></a>
-                <a href="/anunciar/add"><span class="btn btn-mini btn-danger">ANUNCIAR</span></a>
-                <a href="register.php"><span class="btn btn-mini btn-success">AINDA NAO SE TORMOU MEMBRO/SAIR</span></a>
+                <a href="<?php echo $this->url('banner'); ?>" role="button" data-toggle="modal"><span class="btn btn-mini">PUBLICAR BANNER NO RODAPE</span></a>
+                <a href="<?php echo $this->url('anunciar'); ?>"><span class="btn btn-mini btn-danger">ANUNCIAR</span></a>
+                <!--<a href="register.php"><span class="btn btn-mini btn-success">AINDA NAO SE TORMOU MEMBRO/SAIR</span></a>-->
             </div>
         </div>
         <div class="navbar">
