--- a/module/Anuncios/view/partial/categorias/geral.phtml
+++ b/module/Anuncios/view/partial/categorias/geral.phtml
@@ -1,94 +1,19 @@
-<h3 class="title"><span>Most selling Women's Clothing</span></h3>
+<?php if(count($listOfSexs) > 0) :?>
+<h3 class="title"><span><?php echo $title;?></span></h3>
 <ul class="thumbnails">
-    <li class="span3">
-        <div class="thumbnail">
-            <img src="themes/images/clothes/women/bootstrap-women-ware3.jpg" alt="#">
-            <div class="caption">
-                <h3>Women's Clothing</h3>
-                <p class="detailNprice">
-                    <small class="oldPrice">&nbsp;</small>$<span>8.00</span>
-                </p>
-                <p>
-                    <a class="btn btn-warning" href="#"> Add to <i class="icon-shopping-cart"></i></a>
-                    <a class="btn" href="details.php">view details</a>
-                </p>
-            </div>
-        </div>
-    </li>
-    <li class="span3">
-        <div class="thumbnail">
-            <img src="themes/images/clothes/women/bootstrap-women-ware1.jpg" alt="#">
-            <div class="caption">
-                <h3>Women's Clothing</h3>
-                <p class="detailNprice">
-                    <small class="oldPrice">&nbsp;</small>$<span>8.00</span>
-                </p>
-                <p>
-                    <a class="btn btn-warning" href="#"> Add to <i class="icon-shopping-cart"></i></a>
-                    <a class="btn" href="details.php">view details</a>
-                </p>
-            </div>
-        </div>
-    </li>
-    <li class="span3">
-        <div class="thumbnail">
-            <img src="themes/images/clothes/women/bootstrap-women-ware4.jpg" alt="#">
-            <div class="caption">
-                <h3>Women's Clothing</h3>
-                <p class="detailNprice">
-                    <small class="oldPrice">&nbsp;</small>$<span>8.00</span>
-                </p>
-                <p>
-                    <a class="btn btn-warning" href="#"> Add to <i class="icon-shopping-cart"></i></a>
-                    <a class="btn" href="details.php">view details</a>
-                </p>
-            </div>
-        </div>
-    </li>
-    <li class="span3">
-        <div class="thumbnail">
-            <img src="themes/images/clothes/women/bootstrap-women-ware5.jpg" alt="#">
-            <div class="caption">
-                <h3>Women's Clothing</h3>
-                <p class="detailNprice">
-                    <small class="oldPrice">&nbsp;</small>$<span>8.00</span>
-                </p>
-                <p>
-                    <a class="btn btn-warning" href="#"> Add to <i class="icon-shopping-cart"></i></a>
-                    <a class="btn" href="details.php">view details</a>
-                </p>
-            </div>
-        </div>
-    </li>
-    <li class="span3">
-        <div class="thumbnail">
-            <img src="themes/images/clothes/women/bootstrap-women-ware2.jpg" alt="#">
-            <div class="caption">
-                <h3>Women's Clothing</h3>
-                <p class="detailNprice">
-                    <small class="oldPrice">&nbsp;</small>$<span>8.00</span>
-                </p>
-                <p>
-                    <a class="btn btn-warning" href="#"> Add to <i class="icon-shopping-cart"></i></a>
-                    <a class="btn" href="details.php">view details</a>
-                </p>
-            </div>
-        </div>
-    </li>
-    <li class="span3">
-        <div class="thumbnail">
-            <img src="themes/images/clothes/women/bootstrap-women-ware6.jpg" alt="#">
-            <div class="caption">
-                <h3>Women's Clothing</h3>
-                <p class="detailNprice">
-                    <small class="oldPrice">&nbsp;</small>$<span>8.00</span>
-                </p>
-                <p>
-                    <a class="btn btn-warning" href="#"> Add to <i class="icon-shopping-cart"></i></a>
-                    <a class="btn" href="details.php">view details</a>
-                </p>
-            </div>
-        </div>
-    </li>
+    <?php foreach ($this->paginator as $anuncio) {
+        echo $this->partial('partial/article/generic', ['anuncio' => $anuncio]);
+    } ?>
 </ul>
-<div class="cntr"><a class="btn" href="#">view more <i class="icon-repeat"></i></a><br><hr class="soften"></div>
+<div class="cntr">
+    <?php
+    if($type && count($this->paginator) > 1) {
+        echo $this->paginationControl($this->paginator,
+            'Sliding', // All, Elastic, Jumping, Sliding
+            'partial/search_pagination', array('route' => 'paginator-doctrine', 'type' =>$type));
+    }
+    ?>
+</div>
+<?php else :?>
+    <?php echo 'Não existem resultados'; ?>
+<?php endif;?>
