--- a/module/Application/view/partial/navigation.phtml
+++ b/module/Application/view/partial/navigation.phtml
@@ -1,19 +1,17 @@
+<?php
+$serviceLocator = $this->getHelperPluginManager()->getServiceLocator();
+$searchForm = new \Application\Form\SearchForm($serviceLocator);
+$searchFormUrl = $this->url('anuncios' , array( 'action' => 'index' ));
+$searchForm->setAttribute('action', $searchFormUrl);
+$searchForm->setAttribute('class', 'form-inline navbar-search');
+?>
+
 <div class="navbar-inner">
     <a class="brand" href="/"><img src="/themes/images/new_logo.png" alt="Sexoagora.com"></a>
     <div class="nav-collapse">
         <ul id="topMenu" class="nav pull-right">
             <li class="">
-                <form class="form-inline navbar-search" method="post" action="/anuncios" style="padding-top:5px;">
-                    <select class="span3" style="padding:11px 4px; height:auto">
-                        <option value="all">Todos</option>
-                        <option value="mh">Mulheres procurando Homens</option>
-                        <option value="mm"> Mulheres procurando Mulheres</option>
-                        <option value="hm">Homens procurando Mulheres</option>
-                        <option value="hh">Homens procurando Homens</option>
-                    </select>
-                    <!--<input class="span4" type="text" placeholder="eg. T-shirt" style="padding:11px 4px;">-->
-                    <button type="submit" class="btn btn-warning btn-large" style="margin-top:0">Ver anuncios...</button>
-                </form>
+                <?php echo $this->partial('partial/search', array('searchForm' => $searchForm)); ?>
             </li>
         </ul>
     </div>
