--- a/public/themes/css/mystyles.css
+++ b/public/themes/css/mystyles.css
@@ -1,5 +1,20 @@
-textarea {
+#controls-description textarea {
   max-width: 60%;
   height: 300px;
   resize: none;
+}
+
+.conctactos-tex-tarea {
+    height: 200px;
+}
+#search-form {
+    padding-top:5px !important;
+}
+.categories {
+    padding: 11px 4px !important;
+    height: auto !important;
+}
+
+.searchButton {
+    margin-top:0 !important;
 }
