--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -36,14 +36,14 @@
         <div class="span4">
             <h1><i class="icon-heart"></i> </h1>
             <h4>Porque?</h4>
-            <p>Muitas das vezes, precisamos de amor carinho e afecto. Estar com uma "profissional" não quer dizer que vamos correr risco, muito pelo contrario vamos satisfazer o nosso prazer... E ficar tranquilizados</p>
-            <p>Este portal tambem se destina aos solteiros e solteiras que podem colocar aqui os seus anuncios e marcar encontros sem qualquer custo, marcar um cafe, um passeio entre outros. Apensas serve para juntar o ultil ao agradavel...</p>
+            <p>Muitas das vezes, precisamos de amor carinho e afecto. Estar com uma "profissional" não quer dizer que vamos correr risco, muito pelo contrario vamos satisfazer o nosso prazer... E ficar tranquilizados.</p>
+            <p>Este portal tambem se destina aos solteiros e solteiras que podem colocar aqui os seus anuncios e marcar encontros sem qualquer custo, marcar um café, um passeio entre outros. Apensas serve para juntar o ultil ao agradável...</p>
         </div>
         <div class="span4">
             <div class="seperator">
                 <h1><i class="icon-truck iconShipping"></i> </h1>
                 <h4>Um encontro saudavel</h4>
-                <p>Um encontro saudavel estar em ter uma relacao protegida. Sera bom para si e para quem o acompanha independentemente do seu cariz sexual. Mas nao tenha medo. Deixe os vicios de lado como mastrubacao e passe a fazer sexo saudavel mesmo que seja com uma acompanhe. Por isso pegue no carro ou apanhe os transportes publicos e desfrute de uma boa foda!</p>
+                <p>Um encontro saudavel estar em ter uma relacão protegida. Sera bom para si e para quem o acompanha independentemente do seu cariz sexual. Mas nao tenha medo. Deixe os vicios de lado como mastrubacao e passe a fazer sexo saudavel mesmo que seja com uma acompanhe. Por isso pegue no carro ou apanhe os transportes publicos e desfrute de uma boa foda!</p>
 
             </div>
         </div>
@@ -51,7 +51,7 @@
             <h1><i class="icon-comments-alt"></i> </h1>
             <h4>Encontre-nos e faça um gosto</h4>
             <p class="findUs">
-                <a targe="_blank" href="https://www.facebook.com/pages/sexojacom/589694244484300"><i class="icon-facebook"></i></a>
+                <a target="_blank" href="https://www.facebook.com/pages/sexojacom/589694244484300"><i class="icon-facebook"></i></a>
             </p>
             <h4>Publique ja o seu anuncio gratuitamente</h4>
             <div class="caption">
