--- a/module/Application/view/partial/head.phtml
+++ b/module/Application/view/partial/head.phtml
@@ -8,6 +8,7 @@ $currentSelecteLang = "en";
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta name="description" content="sexo ja, site de anuncios para adultos.">
      <meta name="author" content="sexo ja">
+     <meta name="keywords" content="Sexo,acompanhantes porto,acompanhantes lisboa,acompanhantes, sexo portugal,rua69, sexo na cama">
         <!-- styles -->
      <link rel="stylesheet/less" type="text/css" href="/themes/less/bootstrap.less">
       <link rel="stylesheet" type="text/css" href="/themes/css/mystyles.css">
