--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -36,14 +36,15 @@
         <div class="span4">
             <h1><i class="icon-heart"></i> </h1>
             <h4>Porque?</h4>
-            <p>Muitas das vezes, precisamos de amor carinho e afecto. Estar com uma "profissional" não quer dizer que vamos correr risco, muito pelo contrario vamos satisfazer o nosso prazer... E ficar tranquilizados.</p>
-            <p>Este portal tambem se destina aos solteiros e solteiras que podem colocar aqui os seus anuncios e marcar encontros sem qualquer custo, marcar um café, um passeio entre outros. Apensas serve para juntar o ultil ao agradável...</p>
+            <p>Muitos sao os dias que precisamos de amor, carinho e afeto. Os servicos profissionais estao aqui para o ajudar. Os nossos anuncios primam pela qualidade e privacidade. Satisfaca o seu prazer... E fique tranquilizado.</p>
+            <p>Este portal tambem se destina a todos os outros interessados em encontros sem qualquer  compromisso ou custo. Solteira ou casada e solteiro ou casado. Marcar um encontro, nunca foi tao facil. No SexoJa.com é possivel juntar o prazer de um bom encontro a um final feliz. Tudo á distancia de um clique.
+            </p>
         </div>
         <div class="span4">
             <div class="seperator">
                 <h1><i class="icon-truck iconShipping"></i> </h1>
                 <h4>Um encontro saudavel</h4>
-                <p>Um encontro saudavel estar em ter uma relacão protegida. Sera bom para si e para quem o acompanha independentemente do seu cariz sexual. Mas nao tenha medo. Deixe os vicios de lado como mastrubacao e passe a fazer sexo saudavel mesmo que seja com uma acompanhe. Por isso pegue no carro ou apanhe os transportes publicos e desfrute de uma boa foda!</p>
+                <p>Um encontro saudavel é o resultado de uma relacão protegida. O resultado sera sempre bom pois ambos definem o horizonte. Nao tenha medo, nos estamos aqui para o ajudar a acabar com os seus momentos de solidao. Qualidade e a nossa receita. Por isso clique em anunciar, e amanha sera voce a pegar no carro ou apanhar o transporte publico para a melhor noite da sua vida.</p>
 
             </div>
         </div>
