--- a/module/Application/view/partial/head.phtml
+++ b/module/Application/view/partial/head.phtml
@@ -6,9 +6,9 @@ $currentSelecteLang = "en";
      <meta charset="utf-8">
      <title>Sexo ja - Anuncie neste portal...!</title>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta name="description" content="sexo ja, site de anuncios para adultos.">
+     <meta name="description" content="sexo ja, site de anuncios para adultos. Mulher procura Homem Porto. Classificados grátis de encontros Porto.">
      <meta name="author" content="sexo ja">
-     <meta name="keywords" content="Sexo,acompanhantes porto,acompanhantes lisboa,acompanhantes, sexo portugal,rua69, sexo na cama">
+     <meta name="keywords" content="Sexo,acompanhantes porto,acompanhantes lisboa,acompanhantes, sexo portugal,rua69, sexo na cama, mulher Porto, homem Porto, amigos Porto, amigas Porto, relacionamento Porto, casal Porto, dupla Porto, acompanhante Porto, programa Porto, brincar Porto, namorar Porto, sexo Porto">
         <!-- styles -->
      <link rel="stylesheet/less" type="text/css" href="/themes/less/bootstrap.less">
       <link rel="stylesheet" type="text/css" href="/themes/css/mystyles.css">
